# nw-challenge

./: .gitignore  README.md  pyproject.toml
cw-api/: XGB-model-cw.pkl  sample.json
model/: Model-Testing.ipynb  to-expose.ipynb
scripts/: .flaskenv  Procfile  cw-api.py  requirements.txt  xgb-api.py
