[tool.poetry]
name = "nw-challenge"
version = "0.1.0"
description = ""
authors = ["ionatepht <113123154+ionatepht@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "nw_challenge"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
missingno = "^0.5.2"
scikit-learn = "^1.2.2"
imblearn = "^0.0"
wandb = "^0.14.0"
flask = "^2.2.3"
flask-restful = "^0.3.9"
flask-cors = "^3.0.10"
python-dotenv = "^1.0.0"
uvicorn = "^0.21.1"
gunicorn = "^20.1.0"
fastapi = "^0.95.0"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
